registration form updated

--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -4,5 +4,11 @@
 {% block title %} {% endblock title %}
 
 {% block content %}
-
+<div>
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button>Submit</button>
+    </form>
+</div>
 {% endblock content %}
