--- a/products/templates/home.html
+++ b/products/templates/home.html
@@ -4,5 +4,8 @@
 {% block title %}- Home {% endblock title %}
 
 {% block content %}
+<div>
+    <button><a href="{% url 'register' %}">Register</a></button>
+</div>
 <h1>HOME</h1>
 {% endblock content %}
