--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <button><a href="">Regular View</a></button>
+            <button><a href="{% url 'home' %}">Regular View</a></button>
             <button><a href="">API View</a></button>
         </nav>
     </header>
