register, login, dashboard and logout functionalities commited

--- a/products/templates/home.html
+++ b/products/templates/home.html
@@ -6,6 +6,7 @@
 {% block content %}
 <div>
     <button><a href="{% url 'register' %}">Register</a></button>
+    <button><a href="{% url 'login' %}">Login</a></button>
 </div>
 <h1>HOME</h1>
 {% endblock content %}
