Products, categories and search using filtering and ordering and aggregation declared

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -4,6 +4,12 @@
 
 {% block content %}
 <div>
+    {% if messages %}
+    <h2>{{messages.message}}</h2>
+            {% for message in messages %}
+                <li>{{ message }}</li>
+            {% endfor %}
+    {% endif %}
     <form action="" method="post">
         {% csrf_token %}
         <input type="text" name="username" placeholder="Username">
