--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -6,6 +6,9 @@
 {% block content %}
 <div>
     <h2>Welcome {{username|title}}</h2>
+    <button type="submit"><a href="{% url 'update-user' %}">Update profile</a></button>
     <button type="submit"><a href="{% url 'logout' %}">Logout</a></button>
+    {% block update %}
+    {% endblock update %}
 </div>
 {% endblock content %}
