--- a/templates/base.html
+++ b/templates/base.html
@@ -18,5 +18,6 @@
     {% block content %}
     {% endblock content %}
     <script src="{% static '../static/JS/base.js' %}"></script>
+    <script src="{% static 'static/JS/bootstrap.min.js' %}"></script>
 </body>
 </html>
