cart and order structure updated

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <button><a href="{% url 'home' %}">Regular View</a></button>
-            <button><a href="">API View</a></button>
+            <button><a href="{% url 'token-auth' %}">API View</a></button>
         </nav>
     </header>
     <br>
