--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -6,9 +6,13 @@
 {% block content %}
 <div>
     <h2>Welcome {{username|title}}</h2>
+    <button><a href="{% url 'view-cart' %}">View Cart</a></button>
+    <button><a href="{% url 'order-history' %}">Order History</a></button>
     <button type="submit"><a href="{% url 'update-user' %}">Update profile</a></button>
     <button type="submit"><a href="{% url 'logout' %}">Logout</a></button>
     {% block update %}
     {% endblock update %}
+    {% block orderhistory %}
+    {% endblock orderhistory %}
 </div>
 {% endblock content %}
