--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -1,12 +1,12 @@
-{% extends 'base.html'%}
+{% extends 'home.html'%}
 {% load static %}
 
 {% block title %}- {{username}}{% endblock title %}
 
-{% block content %}
+{% block dashboard %}
 <div>
     <h2>Welcome {{username|title}}</h2>
-    <button><a href="{% url 'view-cart' %}">View Cart</a></button>
+    <button><a href="{% url 'view_cart' %}">View Cart</a></button>
     <button><a href="{% url 'order-history' %}">Order History</a></button>
     <button type="submit"><a href="{% url 'update-user' %}">Update profile</a></button>
     <button type="submit"><a href="{% url 'logout' %}">Logout</a></button>
@@ -14,5 +14,10 @@
     {% endblock update %}
     {% block orderhistory %}
     {% endblock orderhistory %}
+    {% block cart %}
+    {% endblock cart %}
 </div>
-{% endblock content %}
+<div>
+    <!-- {% include 'product_detail.html' %} -->
+</div>
+{% endblock dashboard %}
